fix: remove body overflow in general pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -646,6 +646,7 @@ form {
 
             @media (width <=768px) {
                 margin-top: unset;
+                margin-bottom: calc(var(--padding) * 2);
             }
         }
     }
@@ -781,6 +782,10 @@ form {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
         gap: 1rem;
+
+        @media(width <=768px) {
+            padding-bottom: calc(var(--padding) * 2);
+        }
 
         .calendar-item {
             display: flex;
